=== Modified version of GNU Emacs for Mac OS X ===

Version 24.3-modified-3 (27 September 2013)
===========================================

UPDATES

o ESS 13.09


Version 24.3-modified-2 (15 May 2013)
=====================================

UPDATES

o ESS 13.05

(MORE OF LESS) USER VISIBLE CHANGES

o In site-start.el, 'inferior-R-args' no longer includes
  "--no-restore-history" as it apparently had no effect. Thanks to
  Vitalie Spinu for the rectification.

o In site-start.el, 'ess-default-style' is no longer defined to be
  "C++" since the default indentation style in ESS is now "RRR".


Version 24.3-modified-1 (13 March 2013)
=======================================

UPDATES

o GNU Emacs 24.3, released two days ago.

o The application is now code signed. This will ease installation on
  Moutain Lion systems. Thanks to David Caldwell for pointers on how
  to do this.


Version 24.2-modified-7 (23 January 2013)
=========================================

BUG FIX

o Fixed the startup warning message about org-install being
  deprecated. Unfinished job in previous release.


Version 24.2-modified-6 (18 January 2013)
=========================================

USER VISIBLE CHANGE

o Org is *removed* from the distribution as it triggered a warning
  message at Emacs startup. This may seem a rather drastic measure,
  but Org has proved annoying to support as an add-on to the
  distribution. The package may be installed via the Emacs package
  system; see http://orgmode.org/manual/Installation.html. The version
  of Org shipping with GNU Emacs 24.2 is 7.8.11.


Version 24.2-modified-5 (12 January 2013)
=========================================

UPDATES

o ESS 12.09-2

o Org 7.9.3c

o psvn.el is now revision 1369093 of Subversion source code repository
  with Andre Colomb's and Koji Nakamaru's patches to support
  Subversion 1.7; see
  http://mail-archives.apache.org/mod_mbox//subversion-dev/201208.mbox/%3C503B958F.6010906@schickhardt.org%3E